# serve

./: .gitignore  README.md  RELEASE_NOTES.md  build-windows.bat  package-lock.json  package.json
.github/workflows/: release.yml
.tauri/: serve.key.pub
app/: globals.css  layout.tsx  loading.tsx  page.tsx
app/api/auth/github/: route.ts
app/api/auth/github/poll/: route.ts
app/api/auth/signout/: route.ts
app/api/chat/: route.ts
app/api/conversations/: route.ts
app/api/conversations/[id]/: route.ts
app/api/conversations/[id]/messages/: route.ts
app/api/models/: route.ts
app/chat/: page.tsx
app/components/: AuthModal.tsx  TitleBar.tsx
lib/: db.ts  memory.ts  personas.ts
lib/auth/: github.ts  index.ts  store.ts
lib/tauri/: audio.ts  auth.ts  chat.ts  db.ts  embeddings.ts  env.ts  fs.ts
prisma/: schema.prisma
public/: loop.MOV
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: serve.css
src-tauri/src/: main.rs
